# football-analyze-db

./: .env.azure  .env.local  README.md  example_pipeline.py  pyproject.toml  setup.py
custom-logging/: logger.py
custom_logging/: __init__.py  logger.py
custom_logging/config/: defaults.yaml
data/bronze/api_football/: fixtures_140.json  fixtures_39.json  teams.json
football_analyze_db_demo/: README.md  databricks.yml
football_analyze_db_demo/resources/: football_analyze_db_demo.job.yml
football_analyze_db_demo/src/: notebook.ipynb
logging/: logger.py
logging/config/: defaults.yaml
notebooks/: Bronze Notebook.ipynb  Bronze Notebook.py
src/utils/: data_manager.py  setup.py
src/utils/custom_logging/: __init__.py  logger.py
src/utils/custom_logging/config/: defaults.yaml
src/utils/data_configure/: unified_data_utils.py
src/utils/env_utils/: env_loader.py
src/utils/spark_utils/: spark_utils.py
