[tool.poetry]
name = "databricks-project"
version = "0.1.0"
description = "Data Engineering with Azure Databricks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "3.5.0"
python-dotenv = "^1.0.0"
azure-storage-blob = "^12.17.0"
azure-storage-file-datalake = "^12.11.0"
pyarrow = "20.0"
openpyxl = "^3.1.0"
pandas = "^2.3.0"
databricks-cli = "^0.18.0"
dotenv = "^0.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"
jupyter = "^1.0.0"
jupyterlab = "^4.0.0"
pre-commit = "^3.3.0"
bandit = "^1.7.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
sphinx-rtd-theme = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Tool configurations
[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true